force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <description>SOX object - Captures booking, booking adjustments and distibutor &amp; partner referal fee</description>
    <label>Booking</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>