force-app/main/default/objects/Booking__c/fields/Affected_Person__c.field-meta.xml
<CustomField>
    <fullName>Affected_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings4</relationshipName>
    <type>Lookup</type>
</CustomField>