force-app/main/default/objects/Booking__c/fields/Alliance_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner_Name__c</fullName>
    <label>Alliance Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Arista</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Cloudian</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>HPE</fullName>
            </value>
            <value>
                <fullName>Huawei</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Infinidat</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Nutanix</fullName>
            </value>
            <value>
                <fullName>Pure</fullName>
            </value>
            <value>
                <fullName>Scality</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>Swiftstack</fullName>
            </value>
            <value>
                <fullName>Tegile</fullName>
            </value>
            <value>
                <fullName>Tintri</fullName>
            </value>
            <value>
                <fullName>VMWare</fullName>
            </value>
            <value>
                <fullName>Western Digital</fullName>
            </value>
            <value>
                <fullName>Zerto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>