force-app/main/default/objects/Booking__c/fields/Booking_Total__c.field-meta.xml
<CustomField>
    <fullName>Booking_Total__c</fullName>
    <label>Booking Total</label>
    <summarizedField>Booking_Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>