force-app/main/default/objects/Booking__c/fields/BookingName__c.field-meta.xml
<CustomField>
    <fullName>BookingName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id,  IF( RecordType.Name =&apos;Booking&apos;,&apos;Booking-&apos; &amp; Name , &apos;Booking Adjustment-&apos; &amp; Name), &quot;_top&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Name</label>
    <type>Text</type>
</CustomField>