force-app/main/default/objects/Booking__c/fields/Commissions_Total__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Total__c</fullName>
    <label>Commissionable Total</label>
    <summarizedField>Booking_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Impacts_Commission__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>