force-app/main/default/objects/Booking__c/fields/Deal_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Type__c</fullName>
    <label>Deal Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Sourced new logo (PSNL)</fullName>
            </value>
            <value>
                <fullName>Partner Sourced Expand</fullName>
            </value>
            <value>
                <fullName>Rubrik Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>