force-app/main/default/objects/Booking__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Distributor)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>