force-app/main/default/objects/Booking__c/fields/Fed_SI_Partner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Fed_SI_Partner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Deprecate)Fed SI Partner Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Fed_SI_Partner_Lookup)</relationshipLabel>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>