force-app/main/default/objects/Booking__c/fields/Field_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Field_Update_Status__c</fullName>
    <label>Field Update Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Attributes - Frozen</fullName>
            </value>
            <value>
                <fullName>Freeze Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>