force-app/main/default/objects/Booking__c/fields/FiscalYear_Period__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear_Period__c</fullName>
    <formula>Fiscal_Year__c+&apos;-Q&apos;+TEXT(Fiscal_Quarter__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FiscalYear And Period</label>
    <type>Text</type>
</CustomField>