force-app/main/default/objects/Booking__c/fields/Gross_ACV_Total__c.field-meta.xml
<CustomField>
    <fullName>Gross_ACV_Total__c</fullName>
    <label>Gross ACV Total</label>
    <summarizedField>Booking_Line_Item__c.Gross_ACV_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Impacts_Gross_Bookings__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>