force-app/main/default/objects/Booking__c/fields/ISR_SDR_Oppty_Credit_Total_c__c.field-meta.xml
<CustomField>
    <fullName>ISR_SDR_Oppty_Credit_Total_c__c</fullName>
    <label>ISR SDR Oppty Credit Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>