force-app/main/default/objects/Booking__c/fields/Net_Bookings_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Bookings_Total__c</fullName>
    <label>Net TCV Total</label>
    <summarizedField>Booking_Line_Item__c.Net_TCV_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Impacts_Net_Bookings__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>