force-app/main/default/objects/Booking__c/fields/New_Expansion_TCV__c.field-meta.xml
<CustomField>
    <fullName>New_Expansion_TCV__c</fullName>
    <label>Gross New/Expansion TCV</label>
    <summarizedField>Booking_Line_Item__c.New_Expansion_TCV__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Impacts_Gross_Bookings__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>