force-app/main/default/objects/Booking__c/fields/Opportunity_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Distributor__c</fullName>
    <formula>Opportunity__r.Distributor_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Distributor</label>
    <type>Text</type>
</CustomField>