force-app/main/default/objects/Booking__c/fields/Opportunity_Owner_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Employee_ID__c</fullName>
    <label>Opportunity Owner Employee ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>