force-app/main/default/objects/Booking__c/fields/Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Type__c</fullName>
    <label>Original Opportunity Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>NFR</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>