force-app/main/default/objects/Booking__c/fields/Oppty_Trade_Up_Discount__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Trade_Up_Discount__c</fullName>
    <description>FY25SR-556 : to store opportunity trade up discount.</description>
    <label>Trade-up Credit TCV</label>
    <summarizedField>Booking_Line_Item__c.Oppty_Trade_Up_Discount__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Revenue, Partner Referral Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>