force-app/main/default/objects/Booking__c/fields/Order_PO_Accepted_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Order_PO_Accepted_Time_Stamp__c</fullName>
    <label>Booking Date and Time</label>
    <type>DateTime</type>
</CustomField>