force-app/main/default/objects/Booking__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RMA</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Booking Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>