force-app/main/default/objects/Booking__c/fields/Original_Booking__c.field-meta.xml
<CustomField>
    <fullName>Original_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Adjustments</relationshipLabel>
    <relationshipName>BookingAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>