force-app/main/default/objects/Booking__c/fields/Original_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Lead Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>