force-app/main/default/objects/Booking__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Partner Name)</relationshipLabel>
    <relationshipName>Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>