force-app/main/default/objects/Booking__c/fields/Prepayment_Credit__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Credit__c</fullName>
    <description>FY25SR-556 : to store prepayment credit TCV</description>
    <label>Prepayment Credit TCV</label>
    <summarizedField>Booking_Line_Item__c.Prepayment_Credit__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Revenue, Partner Referral Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>