force-app/main/default/objects/Booking__c/fields/PromoDiscTCV__c.field-meta.xml
<CustomField>
    <fullName>PromoDiscTCV__c</fullName>
    <description>Credit given for upgrading from an existing product.</description>
    <inlineHelpText>Amount credited for unused value of the previous product when upgrading. Reduces the quote&apos;s TCV</inlineHelpText>
    <label>Promo Discount TCV</label>
    <summarizedField>Booking_Line_Item__c.PromoDiscTCV__c</summarizedField>
    <summaryFilterItems>
        <field>Booking_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Revenue, Partner Referral Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>Booking_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>