force-app/main/default/objects/Booking__c/fields/R2K__c.field-meta.xml
<CustomField>
    <fullName>R2K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>R2K</label>
    <type>Checkbox</type>
</CustomField>