force-app/main/default/objects/Booking__c/fields/Renewal_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>