force-app/main/default/objects/Booking__c/fields/SDR_Led__c.field-meta.xml
<CustomField>
    <fullName>SDR_Led__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Led</label>
    <type>Checkbox</type>
</CustomField>