force-app/main/default/objects/Booking__c/fields/SE_Misaligned__c.field-meta.xml
<CustomField>
    <fullName>SE_Misaligned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SE Misaligned</label>
    <type>Checkbox</type>
</CustomField>