force-app/main/default/objects/Booking__c/fields/Shipping_Adresss__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Adresss__c</fullName>
    <label>Shipping Adresss</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>