force-app/main/default/objects/Booking__c/recordTypes/Booking.recordType-meta.xml
<RecordType>
    <fullName>Booking</fullName>
    <active>true</active>
    <label>Booking</label>
</RecordType>