force-app/main/default/objects/Booking__c/recordTypes/Booking_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Booking_Adjustment</fullName>
    <active>true</active>
    <description>This is used mainly for debooking</description>
    <label>Booking Adjustment</label>
</RecordType>