force-app/main/default/objects/Booking__c/recordTypes/Booking_Historical_Insert.recordType-meta.xml
<RecordType>
    <fullName>Booking_Historical_Insert</fullName>
    <active>false</active>
    <description>Recordtype used for historical bookings that do not have an order associated with them</description>
    <label>Booking Historical Insert</label>
</RecordType>