force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BookingName__c</columns>
    <columns>Order__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Net_Bookings_Total__c</columns>
    <columns>Gross_Bookings_Total__c</columns>
    <columns>Commissions_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>